# bug_catcher

./: .gitignore  README.md  bugcatcher.py  citations.txt  fallback.txt  sort.py  vision.py
CAD_Models/: 2inch_Corner.stl  April_Tag_Stamp.stl  Bug_World_Model.stl  Claw_Gripper.stl  Color_Plate.stl  FER_arena_locator_bottom.stl  FER_arena_locator_top.stl  LargeBug_Positive_Nolan.stl  NewLargeTurtle_Shell_Hex_Bug_Model.stl  SideARM.stl  SideARM_inverted_Model.stl  SmallBug_Positive_Nolan.stl  SmallTurtle_Shell_Hex_Bug.stl
bug_catcher/: package.xml  setup.cfg  setup.py
bug_catcher/bug_catcher/: Calibration_TargetPublisher.py  Calibration_TargetPublisher_April.py  ColorDetection.py  TargetDecision.py  Trackbar_can_be_deleted_later.py  bug.py  bug_sort.py  bugmover.py  camera.py  catcher_node.py  hsv_tuner.py  motionplanner.py  motionplanninginterface.py  mover_funcs.py  pick_node.py  planningscene.py  robotstate.py  sort.py  turtle_pilot.py  turtle_sim_adjuster.py  vision.py
bug_catcher/config/: aruco_parameters.yaml  bug_color_hsv.yaml  calibrated_colors.yaml  calibration_parameters.yaml  objects.yaml  sky_cam_colors.yaml  sort.yaml  wrist_cam_calibration.yaml  wrist_cam_colors.yaml
bug_catcher/launch/: _load_wirst_tf.launch.py  april_test.launch.xml  aruco_recognition.launch.xml  bug_world.launch.xml  catcher.launch.xml  demo_and_user.launch.xml  pickplace.launch.xml  still_turtles.launch.xml  turtle_pilot.launch.xml
bug_catcher/test/: conftest.py  test_bug_class.py  test_integration.py  test_mover_funcs.py  test_pick.py  test_robotstate.py
ros2_aruco/: setup.py
(+19 files in other folders)
