<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bug_catcher</name>
  <version>0.0.0</version>
  <description>This package creates a MotionPlanningInterface for the FER to pick up
   and retrieve an object.</description>
  <maintainer email="MiguelP@u.northwestern.edu">Miguel Pegues</maintainer>
  <license>MIT</license>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-robotstate.py</exec_depend>
  <exec_depend>python3-planningscene.py</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtle_brick_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
